feature: Endpoints de descarga de datos
Se agregaron los endpoints para poder descargar de datos a la aplicación
